split up routes, add link to sign up

--- a/app/views/sign_in_view.erb
+++ b/app/views/sign_in_view.erb
@@ -4,6 +4,7 @@
   <% if @error %>
     <div class="errors"><%= @error %></div>
   <% end %>
+  <div><a href="/users/new">Sign Up</a></div>
 
   <form id="sign-in" method="post" action="/sessions">
     <label class="label" for="handle">Handle</label>
